fix(ui): add padding to post content on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -245,4 +245,8 @@ pre, code {
       justify-content: center;
       text-align: center;
     }
+
+    .page-content {
+      padding: 1rem;
+    }
 }
